# EiT-ROS

./: .gitignore  README.md
sim/: Scene_version1.ttt  openScene.sh
sim/wsg50/: finger.mtl  wsg50_110 v1_wsg50_110 v1_1_1_Component8_1_Body1_Component8.mtl  wsg50_110 v1_wsg50_110 v1_2_1_Body1_2.mtl  wsg50_110 v1_wsg50_110 v1_4_1_Body1_4.mtl  wsg50_110 v1_wsg50_110 v1_6_1_Body1_6.mtl
src/calibration_node_pkg/: CMakeLists.txt  package.xml
src/calibration_node_pkg/data/: cali_0.csv  cali_1.csv  cali_10.csv  cali_11.csv  cali_12.csv  cali_13.csv  cali_14.csv  cali_15.csv  cali_16.csv  cali_17.csv  cali_18.csv  cali_19.csv  cali_2.csv  cali_20.csv  cali_21.csv  cali_22.csv  cali_3.csv  cali_4.csv  cali_5.csv  cali_6.csv  cali_7.csv  cali_8.csv  cali_9.csv
src/calibration_node_pkg/scripts/: node_calibration.py
src/classifier_pkg/: CMakeLists.txt  package.xml
src/classifier_pkg/launch/: classifier_node.launch
src/classifier_pkg/scripts/: Classifier_class.py  Classifier_node.py  model.sav
src/classifier_pkg/srv/: classify_detections.srv
src/enviroment_controller_pkg/: CMakeLists.txt  package.xml
src/enviroment_controller_pkg/etc/: assemblyKit.json  module.json
src/enviroment_controller_pkg/launch/: enviroment_controller_pkg.launch
src/enviroment_controller_pkg/src/: AssemblyKit.cpp  AssemblyKit.h  EnviromentControllerNode.cpp  EnviromentControllerNode.h  Matrix.cpp  Module.cpp  Module.h  Object.cpp  Object.h  main.cpp
src/enviroment_controller_pkg/srv/: kit_info_srv.srv  module_poses_srv.srv
src/master_pkg/: CMakeLists.txt  package.xml
src/master_pkg/launch/: master_pkg.launch
src/master_pkg/src/: MasterNode.cpp  MasterNode.h  Matrix.h  main.cpp
src/master_pkg/srv/: CurrTCPPose.srv  system_state_srv.srv
src/parts_list_pkg/: CMakeLists.txt  package.xml
src/parts_list_pkg/etc/: parts_file.txt
src/parts_list_pkg/include/parts_list_pkg/: partslist.h
src/parts_list_pkg/launch/: parts_list.launch
src/parts_list_pkg/src/: parts_list_node.cpp  partslist.cpp
src/parts_list_pkg/srv/: missing_parts.srv
src/pickup_db/: CMakeLists.txt  package.xml
src/pickup_db/etc/: objetcs.json
src/pickup_db/include/pickup_db/: pickup_db.hpp
src/pickup_db/launch/: pickup_db.launch
src/pickup_db/src/: pickup_db.cc  pickup_db_node.cc
src/pickup_db/srv/: pickup_db_srv.srv
src/pose_estimation/: CMakeLists.txt  package.xml  rename.py
src/pose_estimation/TEST/TEST_DETECTOR/: CMakeLists.txt  main.cpp
src/pose_estimation/cfg/: PoseEstimation.cfg
src/pose_estimation/config/: pose_estimation.yaml
src/pose_estimation/include/pose_estimation/: detector.h  pose_estimation.hpp
src/pose_estimation/launch/: openni2.launch  pose_estimation.launch
src/pose_estimation/msg/: groundTruth.msg
src/pose_estimation/scripts/: classifier_test.py  convertAnnotations.py  convert_annotations.py  datasetStreamer.py  model.sav  savePics.py
src/pose_estimation/src/: detector.cc  main_pose_est.cpp  pose_estimation.cc  pose_estimation_node.cc
src/pose_estimation/srv/: pose_est_srv.srv
src/position_controller_pkg/: CMakeLists.txt  etc.tar.xz  package.xml
src/position_controller_pkg/etc/: 0.eit  1.eit  2.eit  cali_0.eit  cali_1.eit  cali_10.eit  cali_11.eit  cali_12.eit  cali_13.eit  cali_14.eit  cali_15.eit  cali_16.eit  cali_17.eit  cali_18.eit  cali_2.eit  cali_3.eit  cali_4.eit  cali_5.eit  cali_6.eit  cali_7.eit  cali_8.eit  cali_9.eit  pose_0.eit  pose_1.eit  pose_10.eit  pose_11.eit  pose_12.eit  pose_13.eit  pose_14.eit  pose_15.eit  pose_16.eit  pose_17.eit  pose_18.eit  pose_19.eit  pose_2.eit  pose_20.eit  pose_21.eit  pose_22.eit  pose_23.eit  pose_24.eit  (+10 more)
src/position_controller_pkg/launch/: position_controller.launch  robot_control.launch
src/position_controller_pkg/scripts/: setPreDefPos.py
src/position_controller_pkg/src/: Position_control.cpp  Position_control.hpp  position_controller_main.cpp
src/position_controller_pkg/srv/: Pre_def_pose.srv  Tcp_move.srv
src/ur_robot_pkg/: CMakeLists.txt  package.xml
src/ur_robot_pkg/launch/: ur_driver.launch
src/ur_robot_pkg/scripts/: test_srv.py  ur_recieve_node.py  ur_robot_node.py
src/ur_robot_pkg/srv/: RobState.srv  jointQs.srv  p2p_cmove.srv  set_TCP_offset.srv
src/wsg50-ros-pkg/wsg_50_driver/src/: main.cpp
